<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_now_inspecrion_relase"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    tools:context="com.bxgis.bxportal.ui.inspection.NowInspecrionRelaseActivity"
    android:windowSoftInputMode="stateHidden"
    >


    <RelativeLayout
        android:id="@+id/ll_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/btn_blue_login"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/y15"
        android:paddingTop="@dimen/y15">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:paddingLeft="@dimen/x20"
            android:scaleType="fitXY"
            android:src="@mipmap/icon_back"/>

        <TextView
            android:id="@+id/detail_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/home_title"
            android:textColor="@color/white"
            android:textSize="@dimen/home_title"/>
    </RelativeLayout>

    <Button
        android:id="@+id/release"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/btn_blue_login"
        android:paddingBottom="@dimen/x8"
        android:paddingTop="@dimen/x8"
        android:text="@string/inspection_relese"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_20"/>

    <ScrollView
        android:id="@+id/sv_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/release"
        android:layout_below="@id/ll_top"

        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="@dimen/y20"
        android:paddingLeft="@dimen/x30"
        android:paddingRight="@dimen/x30"
        android:paddingTop="@dimen/y20"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:focusable="true"
            android:focusableInTouchMode="true"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:layout_marginTop="@dimen/y20"
                android:layout_marginBottom="@dimen/y40"
                >

                <TextView
                    android:layout_width="@dimen/x180"
                    android:layout_height="wrap_content"
                    android:text="@string/inspection_name"
                    android:textColor="@color/tv_black_0"
                    android:textSize="@dimen/sp_16"/>

                <com.bxgis.bxportal.widget.CustomEditText
                    android:id="@+id/et_inspection_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bg_tv_content"
                    android:gravity="center_vertical"
                    android:minHeight="@dimen/y65"
                    android:paddingLeft="@dimen/x15"
                    android:paddingRight="@dimen/x10"
                    android:text=""
                    android:textColor="@color/tv_black_1"
                    android:textSize="@dimen/sp_15"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/y35"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/x180"
                    android:layout_height="wrap_content"
                    android:text="@string/inspector"
                    android:textColor="@color/tv_black_0"
                    android:textSize="@dimen/sp_16"/>

                <TextView
                    android:id="@+id/tv_inspector"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bg_tv_content"
                    android:gravity="center_vertical"
                    android:minHeight="@dimen/y65"
                    android:paddingLeft="@dimen/x15"
                    android:paddingRight="@dimen/x10"
                    android:textColor="@color/tv_black_1"
                    android:textSize="@dimen/sp_15"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/y40"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/x180"
                    android:layout_height="wrap_content"
                    android:text="@string/inspection_other_inspectors"
                    android:textColor="@color/tv_black_0"
                    android:textSize="@dimen/sp_16"/>

                <com.bxgis.bxportal.widget.CustomEditText
                    android:id="@+id/tv_other_inspectors"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bg_tv_content"
                    android:gravity="center_vertical"
                    android:minHeight="@dimen/y65"
                    android:paddingLeft="@dimen/x15"
                    android:paddingRight="@dimen/x10"
                    android:textColor="@color/tv_black_1"
                    android:textSize="@dimen/sp_15"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/y35"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/x180"
                    android:layout_height="wrap_content"
                    android:text="@string/inspection_begin_time"
                    android:textColor="@color/tv_black_0"
                    android:textSize="@dimen/sp_16"/>

                <TextView
                    android:id="@+id/inspection_begin_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bg_tv_content"
                    android:gravity="center_vertical"
                    android:minHeight="@dimen/y65"
                    android:paddingLeft="@dimen/x15"
                    android:paddingRight="@dimen/x10"
                    android:textColor="@color/tv_black_1"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/y35"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/x180"
                    android:layout_height="wrap_content"
                    android:text="@string/inspection_end_time"
                    android:textColor="@color/tv_black_0"
                    android:textSize="@dimen/sp_16"/>

                <TextView
                    android:id="@+id/inspection_end_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bg_tv_content"
                    android:gravity="center_vertical"
                    android:minHeight="@dimen/y65"
                    android:paddingLeft="@dimen/x15"
                    android:paddingRight="@dimen/x10"
                    android:textColor="@color/tv_black_1"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/y35"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/x180"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:text="@string/inspection_location"
                    android:textColor="@color/tv_black_0"
                    android:textSize="@dimen/sp_16"/>

                <Spinner
                    android:id="@+id/inspection_location"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:minHeight="@dimen/y65"
                    android:dropDownVerticalOffset="10dp"
                    android:dropDownWidth="@dimen/y600"
                    android:paddingLeft="@dimen/x15"
                    android:paddingRight="@dimen/x10"
                    android:background="@drawable/bg_tv_content"
                    android:prompt="@string/inspection_company"
                    android:spinnerMode="dialog"
                    android:textColor="@color/tv_black_2"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/y35"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/x180"
                    android:layout_height="wrap_content"
                    android:text="@string/inspection_subtype"
                    android:textColor="@color/tv_black_0"
                    android:textSize="@dimen/sp_16"/>

                <TextView
                    android:id="@+id/tv_sub_project1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"

                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/x15"
                    android:textColor="@color/tv_black_1"

                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/tv_sub_project"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bg_tv_content"
                    android:gravity="center"
                    android:minHeight="@dimen/y65"
                    android:text="选择"
                    android:textColor="@color/btn_blue_login"
                    android:textSize="@dimen/sp_16"/>
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/y10"
                android:background="@drawable/bg_tv_content"
                android:padding="@dimen/x5"
                android:visibility="gone"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/y10"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="@dimen/x180"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="其他要求:"
                    android:textColor="@color/tv_black_0"
                    android:textSize="@dimen/sp_16"/>

            </LinearLayout>

            <com.bxgis.bxportal.widget.CustomEditText
                android:id="@+id/et_other_requests"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/y10"
                android:layout_weight="1"
                android:background="@drawable/bg_tv_content"
                android:gravity="left"
                android:minHeight="@dimen/y150"

                android:paddingLeft="@dimen/x15"
                android:text=""
                android:textColor="@color/tv_black_1"
                android:textSize="@dimen/sp_15"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/y30"
                android:layout_marginTop="@dimen/y25"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="现场拍照："
                    android:textColor="@color/tv_black_0"
                    android:layout_marginBottom="@dimen/y10"
                    android:textSize="@dimen/sp_16"/>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_addphoto"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_tv_content"
                    android:padding="@dimen/y15"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_signture"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/y35"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/y15"
                    >

                    <TextView
                        android:id="@+id/sig_clean"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"

                        android:background="@drawable/bg_selsetor_inspection"
                        android:padding="@dimen/x6"
                        android:text="@string/clean"
                        android:textColor="@color/btn_blue_login"
                        android:textSize="@dimen/sp_14"/>

                    <TextView
                        android:id="@+id/sig_retract"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="@dimen/x20"
                        android:layout_toLeftOf="@id/sig_clean"
                        android:layout_toStartOf="@id/sig_clean"
                        android:background="@drawable/bg_selsetor_inspection"
                        android:padding="@dimen/x6"
                        android:text="@string/retract"
                        android:textColor="@color/btn_blue_login"
                        android:textSize="@dimen/sp_14"/>

                    <TextView
                        android:id="@+id/tv1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/signature_name"
                        android:textColor="@color/tv_black_0"
                        android:textSize="@dimen/sp_16"/>


                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/y15"
                    android:background="@drawable/bg_tv_content"
                    android:orientation="horizontal">

                    <com.bxgis.bxportal.widget.SignatureView
                        android:id="@+id/signature_view"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_180"
                        />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
